test/ppx_repr/deriver/errors/unsupported_polyvar_inherit_case.expected
File "unsupported_polyvar_inherit_case.ml", line 2, characters 18-42:
Error: ppx_repr: inherited variant cases encountered in [ | int s
                                                        | `T of string ]. This is unsupported by ppx_repr.
